--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
 
     <script>
         const sentences = [
-            { text: "Good morning!", voice: "young-male" },
-            { text: "How are you doing today?", voice: "young-male" },
+            { text: "Good morning!", voice: "en-US-Male" },
+            { text: "How are you doing today?", voice: "en-US-Male" },
+            { text: "שלום בוקר!", voice: "he-IL-Male" },
+            { text: "מה שלומך היום?", voice: "he-IL-Male" },
+            { text: "איך עברה לך היום בעבודה?", voice: "he-IL-Male" },
+            { text: "איזה סרט אתה ממליץ לראות?", voice: "he-IL-Male" },
+            { text: "איזה ספר כרגע אתה קורא?", voice: "he-IL-Male" },
+            { text: "איזה מסעדה אתם ממליצים לבקר?", voice: "he-IL-Male" },
             // Add more sentences and responses here
         ];
 
