--- a/index.html
+++ b/index.html
@@ -31,12 +31,8 @@
         const sentences = [
             { text: "Good morning!", voice: "en-US-Male" },
             { text: "How are you doing today?", voice: "en-US-Male" },
-            { text: "שלום בוקר!", voice: "he-IL-Male" },
-            { text: "מה שלומך היום?", voice: "he-IL-Male" },
-            { text: "איך עברה לך היום בעבודה?", voice: "he-IL-Male" },
-            { text: "איזה סרט אתה ממליץ לראות?", voice: "he-IL-Male" },
-            { text: "איזה ספר כרגע אתה קורא?", voice: "he-IL-Male" },
-            { text: "איזה מסעדה אתם ממליצים לבקר?", voice: "he-IL-Male" },
+            { text: "שלום בוקר!", voice: "he-IL-Male" }, // Hebrew sentence
+            { text: "מה שלומך היום?", voice: "he-IL-Male" }, // Hebrew sentence
             // Add more sentences and responses here
         ];
 
@@ -53,13 +49,13 @@
         function speakText(text, voice) {
             const synth = window.speechSynthesis;
             const utterance = new SpeechSynthesisUtterance(text);
-            utterance.voice = getVoiceByName(voice);
+            utterance.voice = getMaleVoice(voice);
             synth.speak(utterance);
         }
 
-        function getVoiceByName(voiceName) {
+        function getMaleVoice(voiceName) {
             const voices = window.speechSynthesis.getVoices();
-            return voices.find((voice) => voice.name === voiceName);
+            return voices.find(voice => voice.name === voiceName);
         }
 
         // Wait for the voices to be loaded before using them
